# gepa-next

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEPA_CORE.md  LICENSE  Makefile  PERFORMANCE_CHECKLIST.md  README.md  SECURITY.md  SECURITY_CHECKLIST.md  STYLE_GUIDE.md  SUPPORT.md  USAGE.md  bandit.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
clients/python/: README.md  pyproject.toml
clients/python/gepa_client/: __init__.py  client.py
docs/: API.md  AUTH.md  ENV.md  GEPA.md  QUICKSTART.md  SSE.md  openapi.snap.json
examples/: js_quickstart.mjs  node_sse_client.js  python_quickstart.py  python_sse_client.py
innerloop/: __init__.py  __main__.py  main.py  settings.py
reports/: taste_and_smell_report_20250813_004617.md
scripts/: preflight.sh
tests/: conftest.py  test_admin.py  test_api_models.py  test_auth_bypass.py  test_auth_prod.py  test_backpressure.py  test_cancel_api.py  test_config_tokens.py  test_eval_job.py  test_eval_target_model.py  test_evolution_scoring.py  test_examples_api.py  test_examples_crud.py  test_examples_eval.py  test_gepa_diversity_objective.py  test_gepa_events_alignment.py  test_gepa_loop_judge_participation.py  test_gepa_loop_roles.py  test_gepa_loop_small.py  test_healthz.py  test_idempotency.py  test_judge_cache.py  test_judge_config_headers.py  test_judge_factory.py  test_judge_fallback.py  test_judge_lock.py  test_judge_pair_determinism.py  test_judge_stub.py  (+33 more)
(+59 files in other folders)
